# 6402_task_manager_lr4

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  example.env  pyproject.toml
alembic/: env.py
app/: Dockerfile  config.py  depends.py  main.py
app/api/: limiter.py
app/api/routers/: tasks.py  users.py
app/core/: security.py
app/db/: database.py
app/models/: Task.py  User.py  __init__.py
app/repo/: BaseRepository.py  TaskRepository.py  UserRepository.py  __init__.py
app/schemas/: __init__.py  task.py  user.py
app/services/: BaseService.py  TaskService.py  UserService.py  __init__.py
