[tool.poetry]
name = "task_manager_project"
version = "0.1.0"
description = "RESTful API для регистрации, авторизации и управления записями пользователей."
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
SQLAlchemy = "^2.0.35"
psycopg2-binary = "^2.9.9"
pydantic = {extras = ["email"], version = "^2.9.2"}
redis = "^4.1.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
slowapi = "^0.1.9"
passlib = "^1.7.4"
pydantic-settings = "^2.5.2"
asyncpg = "^0.29.0"
alembic = "^1.13.3"
psycopg = "^3.2.2"
python-multipart = "^0.0.11"
python-json-logger = "^2.0.7"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.2"
fastapi-cache2 = "^0.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
